oauth gateway security getting somewhere